Fix scrollbar showing and width on chrome

--- a/src/components/Calculator/Calculator.module.css
+++ b/src/components/Calculator/Calculator.module.css
@@ -8,7 +8,7 @@
   transition: 0.5s;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .calculator {
     width: 100%;
     height: 100%;
