--- a/src/components/Calculator/CalculatorGrid.module.css
+++ b/src/components/Calculator/CalculatorGrid.module.css
@@ -6,7 +6,7 @@
   transition: 0.5s;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 500px) {
   .grid {
     grid-template-rows: repeat(5, 1fr);
   }
