--- a/src/components/Calculator/CalculatorHistory.module.css
+++ b/src/components/Calculator/CalculatorHistory.module.css
@@ -1,7 +1,7 @@
 .history {
   margin: 0;
   padding: 0;
-  overflow: scroll;
+  overflow-y: auto;
 }
 
 .history__item {
